Solved Some Fishy Errors
